* Fixing homepage transition a little, realized that the homepage div must always be visible since all content is really nested inside it. * Updating navigation in prep for go-live * Adding link back to homepage in header nav, making logo clickable

--- a/source/stylesheets/_header.css.scss
+++ b/source/stylesheets/_header.css.scss
@@ -23,6 +23,11 @@
     font-size: 124px;
     line-height: 124px;
     color: white;
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
   }
 
   .header-right {
